examples/test/testpolicy2060.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2060
  namespace: namespace191
spec:
  podSelector:
    matchLabels:
      key23: value1
      key44: value9
      key28: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value3
      podSelector:
        matchLabels:
          key45: value1
